...
    </Animated.View>
  );

  return (
    <View>
      <Searchbar
        testID="resident-searchbar-input"
        placeholder={I18n.t("findResident.typeHere")}
        onChangeText={onChangeSearch}
        value={query}
      />
      {!online && (
        <Button onPress={() => fetchData("")}>
...
