...
                  >
                    {I18n.t("offlineSync.discard")}
                  </Button>
                </View>
              ))}
              <Button
                testID="offline-retry-button"
                mode="contained"
                onPress={upload}
                loading={isSubmitting}
                disabled={isSubmitting}
              >
                {I18n.t("header.retry")}
...
